--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
     "server": "cd backend && npm start",
     "client": "cd client && npm start",
-    "initialize": "concurrently --kill-others-on-fail \"npm run install-client\" \"npm run install-backend\"",
+    "init": "concurrently --kill-others-on-fail \"npm run install-client\" \"npm run install-backend\"",
     "install-client":"cd client && npm install",
     "install-backend":"cd backend && npm install"
   },
